works, then add some others stuff

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -12,6 +12,8 @@ before:
   hooks:
     # You may remove this if you don't use go modules.
     - go mod tidy
+    # download dependencies
+    - go mod download
     # you may remove this if you don't need //go:generate
     - go generate ./...
 
