--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,3 +1,19 @@
+version: 2
+
+run:
+  timeout: 2m
+
+linters:
+  enable:
+    - govet
+    - staticcheck
+    - errcheck
+    - gofmt
+    - revive
+    - gosimple
+    - unused
+    - structcheck
+
 linters-settings:
   goanalysis:
     build-tags:
