--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,13 +6,10 @@ on:
       - '*'
 
 jobs:
-  release:
-    uses: inovacc/workflows/.github/workflows/reusable-go-release.yml@matrix
+  call-release-workflow:
+    uses: inovacc/workflows/.github/workflows/reusable-go-release.yml@main
     with:
       run-release: true
-      build-windows: true
-      build-macos: false
     permissions:
       contents: write
     secrets: inherit
-
