--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,13 +24,14 @@ jobs:
         sudo apt-get install -y xorg-dev libgl1-mesa-dev libegl1-mesa-dev libgles2-mesa-dev
         sudo apt-get install -y libasound2-dev libpulse-dev
     
-    - name: Install golangci-lint
-      run: |
-        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.55.2
-        golangci-lint --version
-    
     - name: Build
-      run: go build -v ./...
+      run: go build -v -o build/linux/app ./...
+
+    - name: Upload Linux artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: app-linux
+        path: build/linux/app
 
   build-windows:
     runs-on: windows-latest
@@ -43,11 +44,11 @@ jobs:
         go-version: '1.24.5'
         check-latest: true
     
-    - name: Install golangci-lint
-      run: |
-        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.55.2
-        golangci-lint --version
-      shell: bash
-    
     - name: Build
-      run: go build -v ./...
+      run: go build -v -o build/windows/app.exe ./...
+
+    - name: Upload Windows artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: app-windows
+        path: build/windows/app.exe
