--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
         sudo apt-get install -y libasound2-dev libpulse-dev
     
     - name: Build
-      run: go build -v -o build/linux/app ./...
+      run: go build -v -o build/linux/app .
 
     - name: Upload Linux artifact
       uses: actions/upload-artifact@v4
@@ -45,7 +45,7 @@ jobs:
         check-latest: true
     
     - name: Build
-      run: go build -v -o build/windows/app.exe ./...
+      run: go build -v -o build/windows/app.exe .
 
     - name: Upload Windows artifact
       uses: actions/upload-artifact@v4
